--- a/web.html
+++ b/web.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,9 +24,7 @@
   <div class="content">
     <h3>Travel around the world with us</h3>
   </div>
-
   </section>
-
     <section class="about" id="about">
     <h1 class="heading">ABOUT US</h1>
     <div class="row">
@@ -79,7 +78,18 @@
     </div>
 
    </section>
-
-
+   <div class="container">
+       <div class="slider fade active"><img src="https://media.istockphoto.com/photos/aria-waterfall-bubble-picture-id998731302?k=20&m=998731302&s=612x612&w=0&h=zgvEd-6X-tn6ceIbKLMPnnwsEuKKemDSvpLNR0Qe3NQ=" alt="" /></div>
+       <div class="slider fade"><img src="https://images.pexels.com/photos/52961/antelope-nature-flowers-meadow-52961.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" /></div>
+       <div class="slider fade"><img src="https://images.pexels.com/photos/45911/peacock-plumage-bird-peafowl-45911.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" /></div>
+       <div class="slider fade"><img src="https://images.pexels.com/photos/6907122/pexels-photo-6907122.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="" /></div>
+       <div class="slider fade"><img src="https://media.istockphoto.com/photos/and-glass-globes-picture-id847277192?k=20&m=847277192&s=612x612&w=0&h=6zab7sbxJn3pzQD75NX8nUWN-0jZWt6UXFRKs12hYv8=" alt="" /></div>
+       <span id="prev" class="prev"><i class="fas fa-angle-left"></i></span>
+       <span id="next" class="next"><i class="fas fa-angle-right"></i></span>
+       <ul id="indicators" class="indicators">
+       </ul>
+   </div>
+     <script src="https://kit.fontawesome.com/9e5ba2e3f5.js" crossorigin="anonymous"></script>
+   <script type="text/javascript" src="web.js"></script>
 </body>
 </html>
