--- a/web.html
+++ b/web.html
@@ -6,20 +6,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Travel around the world</title>
-<link rel="stylesheet" href="web.css"/>
+
+  <!-- style sheet-->
+  <link rel="stylesheet" href="css\web.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
 </head>
+
+
 <body align="center">
+
+  <!-- start header-->
   <header class="header">
-  <a href="#" class="logo" >
-  <img src="https://cdn4.vectorstock.com/i/thumb-large/05/38/travel-agency-logo-holiday-vacation-for-tourist-vector-34520538.jpg" alt="logo">
-  </a>
-  <nav class="navbar">
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
-    <a href="#continents">Continents</a>
-    <a href="#contact">Log in</a>
-  </nav>
+    <a href="#" class="logo" ><i class="fa-duotone fa-globe"></i><span>Around The World</span>
+    </a>
+    <nav class="navbar">
+      <a href="web.html">Home</a>
+      <a href="#about">About</a>
+      <a href="Europe.html">Europe</a>
+      <a href="#continents">Asia</a>
+      <a href="#continents">North America</a>
+      <a href="#continents">South America</a>
+      <a href="#continents">Australia</a>
+      <a href="#continents">Africa</a>
+      <a href="#contact" class="fas fa-sign-in-alt">Log in</a>
+    </nav>
   </header>
+
+  <!--End header-->
   <section class="home" id="home">
   <div class="content">
     <h3>Travel around the world with us</h3>
@@ -90,6 +104,6 @@
        </ul>
    </div>
      <script src="https://kit.fontawesome.com/9e5ba2e3f5.js" crossorigin="anonymous"></script>
-   <script type="text/javascript" src="web.js"></script>
+   <script type="text/javascript" src="js\web.js"></script>
 </body>
 </html>
