--- a/web.html
+++ b/web.html
@@ -23,12 +23,7 @@
     <nav class="navbar">
       <a href="web.html">Home</a>
       <a href="#about">About</a>
-      <a href="Europe.html">Europe</a>
-      <a href="#continents">Asia</a>
-      <a href="#continents">North America</a>
-      <a href="#continents">South America</a>
-      <a href="#continents">Australia</a>
-      <a href="#continents">Africa</a>
+      <a href="#continents">Continents</a>
       <a href="#contact" class="fas fa-sign-in-alt">Log in</a>
     </nav>
   </header>
@@ -62,7 +57,7 @@
     <div class="box-container">
      <div class="box">
        <img src="https://img1.cgtrader.com/items/2922536/4f86c53b6f/large/relief-map-of-africa-3d-model-3d-model-c4d-stl.jpg" alt="pic">
-       <a href="#"><p><b>AFRICA</b></p></a>
+       <a href="Africa.html"><p><b>AFRICA</b></p></a>
      </div>
 
      <div class="box">
@@ -72,22 +67,22 @@
 
      <div class="box">
        <img src="https://thumbor.bigedition.com/europe/G4-CdpykVfG7F4fQi3sM3Vld52I=/800x599/filters:format(webp):quality(80)/granite-web-prod/63/bf/63bf314e20f546e6bbeafe0816b9b0dc.jpg" alt="pic">
-       <a href="#"><p><b>EUROPE</b></p></a>
+       <a href="Europe.html"><p><b>EUROPE</b></p></a>
      </div>
 
      <div class="box">
        <img src="https://static.turbosquid.com/Preview/2019/10/28__20_24_28/91_cover.jpg287C581A-72CE-408B-93BA-48C081586126Large.jpg" alt="pic">
-       <a href="#"><p><b>North AMERICA</b></p></a>
+       <a href="nourthamirca.html"><p><b>North AMERICA</b></p></a>
      </div>
 
      <div class="box">
        <img src="https://static.turbosquid.com/Preview/2019/02/12__14_03_30/76cover.jpgC4345C94-38AF-43A6-9DF1-5334D70A48DBLarge.jpg" alt="pic">
-       <a href="#"><p><b>SOUTH AMERICA</b></p></a>
+       <a href="southamirca.html"><p><b>SOUTH AMERICA</b></p></a>
      </div>
 
      <div class="box">
        <img src="https://static.turbosquid.com/Preview/2019/02/12__04_46_30/73cover.jpg9AB89642-D3D3-4346-8033-FB4AB7256A5CLarge.jpg" alt ="pic" >
-       <a href="#"><p><b>Australia</b></p></a>
+       <a href="Austrila.html"><p><b>Australia</b></p></a>
      </div>
     </div>
 
