--- a/Europe.html
+++ b/Europe.html
@@ -19,16 +19,11 @@
         <a href="#" class="logo" ><i class="fa-duotone fa-globe"></i><span>Around The World</span>
         </a>
         <nav class="navbar">
-          <a href="web.html">Home</a>
-          <a href="#about">About</a>
-          <a href="Europe.html">Europe</a>
-          <a href="#continents">Asia</a>
-          <a href="#continents">North America</a>
-          <a href="#continents">South America</a>
-          <a href="#continents">Australia</a>
-          <a href="#continents">Africa</a>
-          <a href="#contact" class="fas fa-sign-in-alt">Log in</a>
-        </nav>
+            <a href="web.html">Home</a>
+            <a href="#about">About</a>
+            <a href="#continents">Continents</a>
+            <a href="#contact" class="fas fa-sign-in-alt">Log in</a>
+          </nav>
         </header>
 
 
