--- a/nourthamirca.html
+++ b/nourthamirca.html
@@ -10,76 +10,13 @@
     <meta name="description" content="this is a test page." />
     <meta name="Author" content="FCIS" />
 
-    <link rel="stylesheet" href="css\europe.css"/>
+    <link rel="stylesheet" href="css/America.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
     <title> AROUND NOURTH AMIRICA</title>
-    <style>
+    
 
-        img {
-            display: flex;
-            float: left;
-            width: 40%;
-            height: 40%;
-            position: relative;
-            left: 10px;
-        }
-
-        h1 {
-            font-size: 65px;
-            Text-align: center;
-            color: #7AB730;
-        }
-
-        h2 {
-            color: #7AB730;
-        }
-
-
-        p {
-            display: inline-block;
-            max-width: 400px;
-            margin-left: 40px;
-            overflow: auto;
-        }
-
-        div {
-            flex-wrap: wrap;
-            width: 80%;
-            display: block;
-            font-size: 20px;
-            margin-left: 250px;
-            margin-bottom: 250px;
-        }
-        .header {
-            background: var(--bg);
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 1.5rem 7%;
-            border-bottom: var(--border);
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-        }
-
-            .header .logo img {
-                height: 5rem;
-            }
-
-            .header .navbar a {
-                margin: 0 1rem;
-                font-size: 1.6rem;
-                color: black;
-            }
-
-                .header .navbar a:hover {
-                    color: var(--main-color);
-                    border-bottom: .1rem solid var(--main-color);
-                    padding-bottom: .5rem;
-                }
-
-    </style>
+    
 </head>
 
 <body>
@@ -93,16 +30,16 @@
             <a href="#continents">Continents</a>
             <a href="#contact" class="fas fa-sign-in-alt">Log in</a>
           </nav>
-        </header>
+    </header>
 
-    <br /> <br /> <br />
+    <br><br><br><br><br><br><br><br><br>
 
 
-    <h1> North America </h1>
+    <h1> North America </h1><br><br><br>
 
 
     <div>
-        <h2>.Yosemite National Park, California</h2>
+        <h2>1- Yosemite National Park, California</h2>
         <img src="images/torres.jpg" alt="error" />
         <p>
 
@@ -118,7 +55,7 @@
 
 
     <div>
-        <h2>.Golden Gate Bridge, San Francisc</h2>
+        <h2>2- Golden Gate Bridge, San Francisc</h2>
         <img src="images/golden.jpg" alt="error" />
         <p>
 
@@ -133,7 +70,7 @@
 
 
     <div>
-        <h2>.Soar the Columbia River, the Pacific Ocean in the United States</h2>
+        <h2>3- Soar the Columbia River, the Pacific Ocean in the United States</h2>
         <img src="images/columbia.jpg" alt="error" />
 
         <p>
@@ -146,7 +83,7 @@
 
 
     <div>
-        <h2>.The Rocky Mountains, British Columbia and New Mexico</h2>
+        <h2>4- The Rocky Mountains, British Columbia and New Mexico</h2>
 
         <img src="images/rocky.jpg" alt="error" />
         <p>
