--- a/web.html
+++ b/web.html
@@ -38,7 +38,7 @@
     <h1 class="heading">ABOUT US</h1>
     <div class="row">
      <div class="image">
-       <img src="https://images.pexels.com/photos/460961/pexels-photo-460961.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="photo" height="450"width="600"align="left">
+       <img src="https://www.planetware.com/wpimages/2021/06/canada-tourist-attractions-vancouver-island-old-growth-forest-eden-grove.jpg" alt="photo" height="450"width="600"align="left">
      </div>
      <div class="content">
      <h3> What make our website special?</h3>
@@ -50,6 +50,7 @@
      </div>
 
     </div>
+    <br><br><br><br><br><br><br><br><br><br>
 
     </section>
    <section class="continents" id="continents">
@@ -62,7 +63,7 @@
 
      <div class="box">
        <img src="https://previews.123rf.com/images/concordiadiscors/concordiadiscors1810/concordiadiscors181000001/110750402-realistic-3d-extruded-map-of-asian-continent-including-indian-sub-continent-east-asia-russia-and-mid.jpg" alt="pic">
-       <a href="#"><p><b>ASIA</b></p></a>
+       <a href="asia.html"><p><b>ASIA</b></p></a>
      </div>
 
      <div class="box">
@@ -87,17 +88,19 @@
     </div>
 
    </section>
+   <br><br><br><br><br><br><br><br><br><br>
    <div class="container">
-       <div class="slider fade active"><img src="https://media.istockphoto.com/photos/aria-waterfall-bubble-picture-id998731302?k=20&m=998731302&s=612x612&w=0&h=zgvEd-6X-tn6ceIbKLMPnnwsEuKKemDSvpLNR0Qe3NQ=" alt="" /></div>
-       <div class="slider fade"><img src="https://images.pexels.com/photos/52961/antelope-nature-flowers-meadow-52961.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" /></div>
-       <div class="slider fade"><img src="https://images.pexels.com/photos/45911/peacock-plumage-bird-peafowl-45911.jpeg?auto=compress&cs=tinysrgb&w=600" alt="" /></div>
-       <div class="slider fade"><img src="https://images.pexels.com/photos/6907122/pexels-photo-6907122.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="" /></div>
-       <div class="slider fade"><img src="https://media.istockphoto.com/photos/and-glass-globes-picture-id847277192?k=20&m=847277192&s=612x612&w=0&h=6zab7sbxJn3pzQD75NX8nUWN-0jZWt6UXFRKs12hYv8=" alt="" /></div>
+       <div class="slider fade active"><img src="https://www.planetware.com/photos-large/AUS/australia-new-south-wales-sydney-opera-house.jpg" alt="" /></div>
+       <div class="slider fade"><img src="https://www.planetware.com/wpimages/2018/12/egypt-top-tourist-attractions-nile-cruising.jpg" alt="" /></div>
+       <div class="slider fade"><img src="https://www.planetware.com/wpimages/2019/10/asia-best-places-to-visit-mount-fuji-japan.jpg" alt="" /></div>
+       <div class="slider fade"><img src="https://www.planetware.com/wpimages/2021/06/canada-tourist-attractions-banff-rocky-mountains-lake-louise-and-glacier.jpg" alt="" /></div>
+       <div class="slider fade"><img src="https://www.planetware.com/wpimages/2019/10/asia-best-places-to-visit-singapore.jpg" alt="" /></div>
        <span id="prev" class="prev"><i class="fas fa-angle-left"></i></span>
        <span id="next" class="next"><i class="fas fa-angle-right"></i></span>
        <ul id="indicators" class="indicators">
        </ul>
    </div>
+   <br><br><br><br><br><br><br><br><br><br>
      <script src="https://kit.fontawesome.com/9e5ba2e3f5.js" crossorigin="anonymous"></script>
    <script type="text/javascript" src="js\web.js"></script>
 </body>
