--- a/AroundTheWorld-main/Africa.html
+++ b/AroundTheWorld-main/Africa.html
@@ -1,45 +1,45 @@
 <!DOCTYPE html>
-  <html lang="en">
-    <head> 
-      <meta charset="UTF-8">
-      <title>Travel Around The World</title>
-      <link rel="stylesheet" type="text/css" href="css/style.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Travel Around The World</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
 
-    </head>
-    <body>
-      <header class="header">
-        <a href="#" class="logo" ><i class="fa-duotone fa-globe"></i><span>Around The World</span>
-        </a>
-        <nav class="navbar">
-          <a href="web.html">Home</a>
-          <a href="#about">About</a>
-          <a href="#continents">Continents</a>
-          <a href="registration.html" class="fas fa-sign-in-alt">Registr</a>
+</head>
+<body>
+  <header class="header">
+    <a href="#" class="logo" ><i class="fa-duotone fa-globe"></i><span>Around The World</span>
+    </a>
+    <nav class="navbar">
+        <a href="web.html">Home</a>
+        <a href="#about">About</a>
+        <a href="file:///E:/around%20the%20world/AroundTheWorld-main/web.html#continents">Continents</a>
+        <a href="registration.html" class="fas fa-sign-in-alt">Registr</a>
       <a href="login.html" class="fas fa-sign-in-alt">Log in</a>
-        </nav>
-      </header>
-      <br><br><br><br><br><br><br><br><br>
-      <div class="intro">
-        <h2>Africa</h2>
-        <img class="jp" src="images/jp.jpg">
-        <p class="pa">Africa is a continent rich in its cultures,diversity and history.Africa is one of the worlds important tourism destinations as
-        has attractive and enjoyable natural resources from parks,forests,waterfalls and among the most popular tourist sites on the continent
-        the Masai Mara Reserve in Kenya and the pyramids of Egypt and the city of Djinni,Mali.Let us take some the tourist sites,for example:</p>
-        </div>
-        <br>
-        <section>
-          <div class="image">
+      </nav>
+    </header>
+ <div class="intro">
+    <h1>Africa</h1>
+    <br><br><br><br><br>
+    <img class="jp" src="https://github.com/rana430/AroundTheWorld/blob/main/jp.jpg?raw=true">
+    <p class="pa">Africa is a continent rich in its cultures,diversity and history.Africa is one of the worlds important tourism destinations as
+    has attractive and enjoyable natural resources from parks,forests,waterfalls and among the most popular tourist sites on the continent
+    the Masai Mara Reserve in Kenya and the pyramids of Egypt and the city of Djinni,Mali.Let us take some the tourist sites,for example:</p>
+  </div>
+     <section>
+      <div class="pyramids">
       <h3>1.The pyramids</h3>
-    <img class="image"src="images/ts.jpg">
+    <img class="image"src="https://www.planetware.com/photos-large/EGY/egypt-cairo-pyramids-of-giza.jpg">
    <p class="text">There are three Egyptian pyramids in Giza Khufu, Khafre, and Menkaure.The largest is the pyramid of Khufu, also called 
    the Great Pyramid of Giza.The Great Pyramid of Giza is the largest of all Seven Wonders of the Ancient World.the city of Cairo,Egypt.
   The Giza pyramid are considered the most important an archaeological and tourist attractions in Egypt, so we should visit them to know 
   history and civilization of our country.The interior walls of these pyramids are decorated with drawings that bring pleasure to the 
   spirit of the king after its return.</p> 
       </div>
-      <div class="image">
+      <div class="victoria falls">
      <h3>2.Victoria Falls</h3>
     <img class="image" src="images/victoria.jpg">
   <p class="fa">Victoria Falls is a waterfall on the Zambezi River in southern Africa, which provides habitat for several unique species of plants and animals. It is located on the border 
