--- a/AroundTheWorld-main/Austrila.html
+++ b/AroundTheWorld-main/Austrila.html
@@ -21,7 +21,7 @@
         <nav class="navbar">
           <a href="web.html">Home</a>
           <a href="#about">About</a>
-          <a href="#continents">Continents</a>
+          <a href="file:///E:/around%20the%20world/AroundTheWorld-main/web.html#continents">Continents</a>
           <a href="registration.html" class="fas fa-sign-in-alt">Registr</a>
       <a href="login.html" class="fas fa-sign-in-alt">Log in</a>
         </nav>
