--- a/AroundTheWorld-main/registration.html
+++ b/AroundTheWorld-main/registration.html
@@ -11,6 +11,13 @@
 
     <!--style-->
     <style>
+
+     body{
+      background: url("https://wallpapertag.com/wallpaper/full/8/7/e/221119-travel-background-1920x1080-laptop.jpg");
+      background-color: (0,0,0,0.9);
+      background-repeat: no-repeat;
+     }
+
       form {
         text-align: left;
         margin-left: 3cm;
@@ -41,7 +48,7 @@
       <nav class="navbar">
         <a href="web.html">Home</a>
         <a href="#about">About</a>
-        <a href="#continents">Continents</a>
+        <a href="file:///E:/around%20the%20world/AroundTheWorld-main/web.html#continents">Continents</a>
         
         <a href="registration.html" class="fas fa-sign-in-alt">Registr</a>
         <a href="login.html" class="fas fa-sign-in-alt">Login</a>
@@ -103,7 +110,10 @@
         >
         <br />
         <input type="radio" name="genre" id="female" />
-        <label class="gen" for="female">female.</label>
+        <label class="gen" for="female" style="background-color: rgb(250, 245, 245)"
+        class="gen"
+        for="male"
+        >female.</label>
       </div>
       <br />
       <br />
