--- a/AroundTheWorld-main/login.html
+++ b/AroundTheWorld-main/login.html
@@ -42,14 +42,15 @@
   </head>
   <body>
     <header class="header">
-      <a href="#" class="logo"
-        ><i class="fa-duotone fa-globe"></i><span>Around The World</span>
+      <a href="web.html" class="logo">
+
+      <i class="fa-duotone fa-globe"></i><span>Around The World</span>
       </a>
       <nav class="navbar">
         <a href="web.html">Home</a>
         <a href="#about">About</a>
         
-        <a href="#file:E:\around the world\AroundTheWorld-mainweb.html#continents">Continents</a>
+        <a href="file:///E:/around%20the%20world/AroundTheWorld-main/web.html#continents">Continents</a>
         <a href="registration.html" class="fas fa-sign-in-alt">Registr</a>
         <a href="login.html" class="fas fa-sign-in-alt">Log in</a>
       </nav>
